tests/baselines/reference/decoratorOnClassProperty13.errors.txt
tests/cases/conformance/decorators/class/property/decoratorOnClassProperty13.ts(4,5): error TS2322: Type '<T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>) => TypedPropertyDescriptor<number>' is not assignable to type '(target: Object, propertyKey: string | symbol, descriptor: TypedPropertyDescriptor<string>) => void | TypedPropertyDescriptor<string>'.
  Type 'TypedPropertyDescriptor<number>' is not assignable to type 'void | TypedPropertyDescriptor<string>'.
    Type 'TypedPropertyDescriptor<number>' is not assignable to type 'TypedPropertyDescriptor<string>'.
      Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/decorators/class/property/decoratorOnClassProperty13.ts (1 errors) ====
    declare function dec<T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>): TypedPropertyDescriptor<number>;
    
    class C {
        @dec prop: string;
        ~~~~
!!! error TS2322: Type '<T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>) => TypedPropertyDescriptor<number>' is not assignable to type '(target: Object, propertyKey: string | symbol, descriptor: TypedPropertyDescriptor<string>) => void | TypedPropertyDescriptor<string>'.
!!! error TS2322:   Type 'TypedPropertyDescriptor<number>' is not assignable to type 'void | TypedPropertyDescriptor<string>'.
!!! error TS2322:     Type 'TypedPropertyDescriptor<number>' is not assignable to type 'TypedPropertyDescriptor<string>'.
!!! error TS2322:       Type 'number' is not assignable to type 'string'.
    }